Altered class names

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
                 <h3 class='secondary-heading-bottom'>Monthly Subscription</h3>
 
-                <h1 class='price'>$29</h1> <p class='fade-out'>per month</p>
+                <h1 class='price'>$29 <span class='fade-out'>per month</span> </h1>
 
                 <p class='bottom-text'>Full access for less than $1 a day</p>
 
-                <a href='#'>Sign Up</a>
+                <div class='sign-up-container'><a class='sign-up' href='#'>Sign Up</a></div>
 
             </div>
 
@@ -42,13 +42,13 @@
                 
                 <h3 class='secondary-heading-bottom'>Why Us?</h3>
 
-                <p class='fade-out'>Tutorials by industry experts</p>
-                <p class='fade-out'>Peer & expert code review</p>
-                <p class='fade-out'>Coding exercises</p>
-                <p class='fade-out'>Access to our Github repos</p>
-                <p class='fade-out'>Community forum</p>
-                <p class='fade-out'>Flashcard decks</p>
-                <p class='fade-out'>New videos every week</p>
+                <p class='fade-out-light'><strong>Tutorials by industry experts</strong></p>
+                <p class='fade-out-light'><strong>Peer & expert code review</strong></p>
+                <p class='fade-out-light'><strong>Coding exercises</strong></p>
+                <p class='fade-out-light'><strong>Access to our Github repos</strong></p>
+                <p class='fade-out-light'><strong>Community forum</strong></p>
+                <p class='fade-out-light'><strong>Flashcard decks</strong></p>
+                <p class='fade-out-light'><strong>New videos every week</strong></p>
 
             </div>
 
